# qshowpos

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  INSTALL  README.md
src/: CMakeLists.txt  QRecentFilesMenu.cpp  QRecentFilesMenu.h  main.cpp  qshowpos.cpp  qshowpos.h  qshowposWidget.cpp  qshowposWidget.h
